--- a/OOP/OOPFundamentalPrinciplesPartOne/2.Human/2.Human.csproj
+++ b/OOP/OOPFundamentalPrinciplesPartOne/2.Human/2.Human.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{88FD38AE-EF08-4625-A12C-20DE4A16457D}</ProjectGuid>
+    <ProjectGuid>{AD40179F-9ECA-432D-95EC-CD8208610A0D}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_1.School</RootNamespace>
-    <AssemblyName>1.School</AssemblyName>
+    <RootNamespace>_2.Human</RootNamespace>
+    <AssemblyName>2.Human</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,19 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class.cs" />
-    <Compile Include="IComment.cs" />
-    <Compile Include="Discipline.cs" />
-    <Compile Include="IPerson.cs" />
-    <Compile Include="School.cs" />
-    <Compile Include="SchoolTest.cs" />
+    <Compile Include="Human.cs" />
+    <Compile Include="HumanTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
-    <Compile Include="Teacher.cs" />
+    <Compile Include="Worker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
