--- a/OOP/OOPFundamentalPrinciplesPartOne/3.Animals/3.Animals.csproj
+++ b/OOP/OOPFundamentalPrinciplesPartOne/3.Animals/3.Animals.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{88FD38AE-EF08-4625-A12C-20DE4A16457D}</ProjectGuid>
+    <ProjectGuid>{CAB46F2F-3D8D-4159-AA16-D7B4519AF7C3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_1.School</RootNamespace>
-    <AssemblyName>1.School</AssemblyName>
+    <RootNamespace>_3.Animals</RootNamespace>
+    <AssemblyName>3.Animals</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,19 +41,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class.cs" />
-    <Compile Include="IComment.cs" />
-    <Compile Include="Discipline.cs" />
-    <Compile Include="IPerson.cs" />
-    <Compile Include="School.cs" />
-    <Compile Include="SchoolTest.cs" />
+    <Compile Include="Animal.cs" />
+    <Compile Include="AnimalsTest.cs" />
+    <Compile Include="Cat.cs" />
+    <Compile Include="Dog.cs" />
+    <Compile Include="Frog.cs" />
+    <Compile Include="ISound.cs" />
+    <Compile Include="Kitten.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="Teacher.cs" />
+    <Compile Include="Sex.cs" />
+    <Compile Include="Tomcat.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
