--- a/OOP/AcademyPopcorn/AcademyPopcorn/AcademyPopcorn.csproj
+++ b/OOP/AcademyPopcorn/AcademyPopcorn/AcademyPopcorn.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73D969F1-263E-48C6-ACCA-682EA3F40052}</ProjectGuid>
+    <ProjectGuid>{D50F4786-9751-4526-8D31-BB09B73CCC59}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_2.Bank</RootNamespace>
-    <AssemblyName>2.Bank</AssemblyName>
+    <RootNamespace>AcademyPopcorn</RootNamespace>
+    <AssemblyName>AcademyPopcorn</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,21 +41,41 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Account.cs" />
-    <Compile Include="Company.cs" />
-    <Compile Include="Customer.cs" />
-    <Compile Include="Deposit.cs" />
-    <Compile Include="IDeposit.cs" />
-    <Compile Include="IInterest.cs" />
-    <Compile Include="IWithdraw.cs" />
-    <Compile Include="Loan.cs" />
-    <Compile Include="Mortgage.cs" />
-    <Compile Include="Person.cs" />
-    <Compile Include="TestBank.cs" />
+    <Compile Include="Ball.cs" />
+    <Compile Include="Blast.cs" />
+    <Compile Include="Block.cs" />
+    <Compile Include="Bullet.cs" />
+    <Compile Include="CollisionData.cs" />
+    <Compile Include="CollisionDispatcher.cs" />
+    <Compile Include="ConsoleInterface.cs" />
+    <Compile Include="ConsoleRenderer.cs" />
+    <Compile Include="Engine.cs" />
+    <Compile Include="ExplodingBlock.cs" />
+    <Compile Include="Gift.cs" />
+    <Compile Include="GiftBlock.cs" />
+    <Compile Include="ICollidable.cs" />
+    <Compile Include="IndestructibleBlock.cs" />
+    <Compile Include="IObjectProducer.cs" />
+    <Compile Include="IRenderable.cs" />
+    <Compile Include="IUserInterface.cs" />
+    <Compile Include="KeyboardInterface.cs" />
+    <Compile Include="MatrixCoords.cs" />
+    <Compile Include="GameObject.cs" />
+    <Compile Include="IRenderer.cs" />
+    <Compile Include="MeteoriteBall.cs" />
+    <Compile Include="MovingObject.cs" />
+    <Compile Include="AcademyPopcornMain.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Racket.cs" />
+    <Compile Include="ShootEngine.cs" />
+    <Compile Include="ShootingRacket.cs" />
+    <Compile Include="TrailObject.cs" />
+    <Compile Include="UnpassableBlock.cs" />
+    <Compile Include="UnstoppableBall.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="PopcornDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
