--- a/OOP/CommonTypeSystem/4.Person/4.Person.csproj
+++ b/OOP/CommonTypeSystem/4.Person/4.Person.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{BDB719C6-CD4F-43BE-9CFA-D12375F7F301}</ProjectGuid>
+    <ProjectGuid>{16F9D3C3-B918-4F57-9768-E231486DCC53}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Assistant</RootNamespace>
-    <AssemblyName>Assistant</AssemblyName>
+    <RootNamespace>_4.Person</RootNamespace>
+    <AssemblyName>4.Person</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,17 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Appoinment.cs" />
-    <Compile Include="Contact.cs" />
-    <Compile Include="Firm.cs" />
     <Compile Include="Person.cs" />
-    <Compile Include="PersonalAssistant.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="TestPerson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
